--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -36,12 +37,12 @@
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
+    "react-hot-loader": "^4.3.12",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "react-hot-loader": "^4.3.12"
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
