--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.12",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
@@ -49,11 +51,16 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "chayns-components": "^4.4.3",
+    "chayns-components": "^4.12.23",
+    "chayns-logger": "^2.7.0",
     "date-fns": "^1.30.1",
+    "immer": "^5.0.0",
     "immutable": "^3.8.2",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-dom": "^16.6.0",
+    "react-redux": "^7.1.3",
+    "react-signature-canvas": "^1.0.3",
+    "redux": "^3.7.2"
   },
   "repository": {
     "type": "git",
