--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,24 @@
     "@babel/plugin-proposal-object-rest-spread",
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose" : true }],
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+    ["transform-imports", {
+      "@fortawesome/free-brands-svg-icons": {
+        "transform": "@fortawesome/free-brands-svg-icons/${member}",
+        "skipDefaultConversion": true,
+        "preventFullImport": true
+      },
+      "@fortawesome/free-regular-svg-icons": {
+        "transform": "@fortawesome/free-regular-svg-icons/${member}",
+        "skipDefaultConversion": true,
+        "preventFullImport": true
+      },
+      "@fortawesome/free-solid-svg-icons": {
+        "transform": "@fortawesome/free-solid-svg-icons/${member}",
+        "skipDefaultConversion": true,
+        "preventFullImport": true
+      }
+    }]
   ],
   "presets": [
     ["@babel/preset-env", { "modules": false }],
