--- a/.eslintrc
+++ b/.eslintrc
@@ -22,10 +22,7 @@
     }],
     "indent": ["error", 4, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "windows"],
-    "max-len": ["error", {
-      "code": 150,
-      "ignorePattern": true
-    }],
+    "max-len": ["error", { "code": 150 }],
     "no-plusplus": "off",
     "strict": "off",
     "object-curly-newline": ["error", {
