Add script in package.json to fix eslint errors

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:http": "webpack-dev-server --config ./webpack/dev.babel.js",
     "build": "webpack -p --config ./webpack/prod.babel.js",
     "build:staging": "webpack -p --config ./webpack/staging.babel.js",
+    "fix:eslint": "eslint --fix --ext .jsx,.js ./src ./webpack",
     "postinstall": "node postinstall.js"
   },
   "author": "Tobit.Software",
